--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 		<imagetarget id='lady' src='targets/lady.png'></imagetarget>
 		<imagetarget id='reel' src='targets/reel.png'></imagetarget>
 		<imagetarget id='rmn' src='targets/rmn.png'></imagetarget>
-		<imagetarget id='R' src='targets/R.jpg'></imagetarget>
-		<imagetarget id='R' src='targets/R.jpg'></imagetarget>
+		<imagetarget id='images' src='targets/images.jpg'></imagetarget>
+		<imagetarget id='dinosaurdiary01' src='targets/dinosaurdiary01.jpg'></imagetarget>
 
     <video id="webcam-video" muted autoplay playsinline style="width:1px;position:absolute"></video>
     <!-- <video id="webcam-video" muted autoplay playsinline style="width:100%; height:100%; object-fit:cover; position:absolute"></video> -->
@@ -81,7 +81,7 @@
     </div>
     <script src="arcamera.js" type="text/javascript"></script>
     <script src="itracker.js" type="text/javascript"></script>
-    <script src="Build/TemplateData.loader.js"></script>
+    <script src="Build/1011.loader.js"></script>
     <script>
             var initialize = async() =>{
                 var unityCanvas = document.querySelector("#unity-canvas");
@@ -112,9 +112,9 @@
                 
                 document.getElementById("startARDiv").style.display = "none";
                 createUnityInstance(document.querySelector("#unity-canvas"), {
-                    dataUrl: "Build/TemplateData.data",
-                    frameworkUrl: "Build/TemplateData.framework.js",
-                    codeUrl: "Build/TemplateData.wasm",
+                    dataUrl: "Build/1011.data",
+                    frameworkUrl: "Build/1011.framework.js",
+                    codeUrl: "Build/1011.wasm",
                     streamingAssetsUrl: "StreamingAssets",
                     companyName: "DefaultCompany",
                     productName: "WebAR",
